# tora

./: .gitignore  .gitmodules  AUTHORS  BUGS  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.EXT.mkdn  README.mkdn  SConstruct  TODO  Tora.l  Tora.ll  Tora.y  Tora.yy  array.cc  array.h  code.h  compiler.cc  compiler.h  disasm.cc  disasm.h  dump_tree.cc  dump_tree.h  hello.tra  if-false.tra  lempar.c  lex.yy.c  lexer.h  lexer.re  main.cc  node.cc  node.h  nodes.gen.cc  nodes.gen.h  nodes.gen.pl  op.cc  op.h  ops.gen.cc  (+16 more)
benchmark/: for.tra  loop.sh
benchmark/fib/: fib.js  fib.pl  fib.py  fib.tra
benchmark/loop/: for-range.pl  for-range.tra
docs/: Makefile  make.bat
docs/source/: about.rst  builtin_object.rst  conf.py  control.rst  index.rst  literals.rst  operators.rst  styleguide.rst
docs/top/: index.html
eg/: 01.tra  02.tra  03.tra  04.tra  echo-server.tra  end.tra  fib.tra  func.tra  getenv.tra  hello.tra  lexvars.tra  recusrion.tra  string.tra  sub.tra  tcp-client.tra  while.tra
eg/future/: array.tra  array_methods.tra  assign-assign.tra  double.tra  operator.tra
eg/leaks/: string.tra  sub.tra
eg/t/: args.tra  array.tra  assign-assign.tra  closure.tra  decrement.tra  end.tra  fib.tra  filetest.tra  for.tra  getenv.tra  hash.tra  heredoc.tra  if.tra  increment.tra  more.tra  multiple_return.tra  regexp.tra  ret2.tra  ret3.tra  scope.tra  string.tra
ext/: .gitignore
ext/Curl/: CMakeLists.txt  SConstruct  THIS_MODULE_IS_WORK_IN_PROGRESS  curl.cc
ext/Curl/lib/: Curl.tra
ext/Curl/lib/Curl/: Easy.tra
ext/Curl/t/: curl.tra
ext/Digest-MD5/: CMakeLists.txt  Digest-MD5.cc  SConstruct
ext/Digest-MD5/lib/Digest/: MD5.tra
ext/Digest-MD5/t/: test.tra
ext/Fcntl/: CMakeLists.txt  SConstruct  fcntl.cc
ext/File-Path/: path.cc
ext/HTTP/: CMakeLists.txt  SConstruct  http.cc
ext/HTTP-Server-Mongoose/: SConstruct  mongoose.cc
ext/HTTP/eg/: server.tra
ext/HTTP/lib/HTTP/: Client.tra  Parser.tra  Response.tra  Status.tra
ext/HTTP/lib/HTTP/Server/: Simple.tra
ext/HTTP/t/: client.tra  http.tra  response.tra
ext/IRC/: CMakeLists.txt  SConstruct  irc.cc  nanoircparser.hpp
ext/IRC/lib/IRC/: Parser.tra
ext/IRC/t/: 01_parser.tra
ext/JSON/: .gitignore  CMakeLists.txt  SConscript  SConstruct  json.cc
ext/Path/: CMakeLists.txt  SConstruct  path.cc
ext/Path/lib/: Path.tra
ext/Path/t/: 01_mkpath.tra  02_path.tra
ext/Socket/: CMakeLists.txt  SConstruct  socket.cc
ext/Socket/lib/: Socket.tra
ext/Socket/t/: 01_const.tra
ext/URI-Escape/: CMakeLists.txt  SConstruct  URI-Escape.cc  nanouri.h
ext/URI-Escape/lib/URI/: Escape.tra
ext/URI-Escape/t/: 01-uri.tra
ext/UV/: CMakeLists.txt  SConstruct  uv.cc
ext/UV/eg/: 03_connect.tra  04_write.tra  05_read.tra  06_accept.t  07_idle.t  timer.tra
ext/UV/lib/: UV.tra
ext/UV/t/: 01_timer.tra  02_inline.tra  uv.tra
lib/: Config.tra.in  Path.tra  Socket.tra  XSLoader.tra
lib/Test/: More.tra
lib/URI/: Split.tra
misc/: valgrind.pl
notes/: More.tra  argument.tra  ast.mkdn  closure.tra  diary.mkdn  fizzbuzz.tra  nodes.gen.tra  plan.mkdn  ref.mkdn  regexp.mkdn  scope.mkdn  todo.mkdn
proposals/: 001-no-global-namespace.mkdn
src/: array.cc  builtin.cc  builtin.h  code.h  compiler.cc  compiler.h  disasm.cc  disasm.h  frame.cc  frame.h  inspector.cc  inspector.h  lempar.c  lexer.h  lexer.re  main.cc  memorypool.h  node.cc  node.h  nodes.gen.pl  object.cc  object.h  op.h  op_array.h  operator.cc  operator.h  ops.gen.pl  package.cc  package.h  package_map.cc  package_map.h  parser.class.h  parser.yy  peek.cc  peek.h  picojson.h  prim.h  regexp.h  shared_ptr.h  stack.cc  (+16 more)
src/object/: array.cc  array.h  bytes.cc  caller.cc  caller.h  code.cc  code.h  dir.cc  dir.h  dynaloader.cc  dynaloader.h  env.cc  env.h  file.cc  file.h  internals.cc  internals.h  json.cc  json.h  metaclass.cc  metaclass.h  object.cc  object.h  regexp.cc  socket.cc  socket.h  stat.cc  stat.h  str.cc  str.h  symbol.cc  symbol.h  time.cc  time.h  uv.cc  uv.h
src/value/: array.cc  array.h  bool.cc  bool.h  bytes.h  code.cc  code.h  double.h  exception.cc  exception.h  file.h  hash.cc  hash.h  int.h  lambda.h  object.cc  object.h  pointer.h  range.cc  range.h  regexp.h  str.cc  str.h  symbol.h  tuple.h  undef.h
t/: Util.pm  array.t  basic.t  class.t  comment.t  conditional_expresion.t  do.t  do.tcc  eg.t  end.t  eval.t  exception.t  exception.tra  foreach.t  func.t  getenv.t  hello.t  if.t  lineno.t  printf.t  semicolon.t  string.t  test-more.t  vars.t
t/lib/: Basic.tra  Foo.tra
t/tra/: __file__.tra  anonfor.tra  array.tra  array_sort.tra  binary_assign.tra  caller.tra  class-method.tra  class.tra  closure.tra  code.tra  conditional_expression.tra  config.tra  dir.tra  double.tra  exception.tra  file.tra  filetest.tra  getcwd.tra  global_vars.tra  hash.tra  if.tra  json.tra  lambda.tra  last.tra  literals.tra  local.tra  object.tra  ok.tra  operator.tra  optargs.tra  postfix-for.tra  rand.tra  range.tra  return.tra  socket.tra  sprintf.tra  stmt_scope.tra  string-copy.tra  string-embed-var.tra  swap.tra  (+3 more)
tests/: nanotap.h  test_compiler.cc  test_hexchar2int.cc  test_inspector.cc  test_lexer.cc  test_lexical_frame.cc  test_package.cc  test_pad_list.cc  test_split_package.cc  test_stack.cc  test_value.cc  test_value_array.cc  test_value_code.cc  test_value_op.cc
tools/lemon/: lemon.c
tora/: builtin.cc  builtin.h  callback.h  class_builder.cc  class_builder.h  compiler.cc  compiler.h  config.h  config.h.in  disasm.cc  disasm.h  exception.h  exception.t  frame.cc  frame.h  inspector.cc  inspector.h  lempar.c  lexer.h  lexer.re  main.cc  memorypool.h  node.cc  node.h  nodes.gen.pl  object.cc  object.h  op.cc  op.h  op_array.h  operator.cc  operator.h  package.cc  package.h  package_map.cc  package_map.h  pad_list.cc  pad_list.h  parser.class.h  parser.yy  (+19 more)
tora/object/: array.cc  bytes.cc  caller.cc  class.cc  code.cc  dir.cc  double.cc  dynaloader.cc  env.cc  file.cc  file_package.cc  hash.cc  int.cc  internals.cc  metaclass.cc  object.cc  re2_regexp_matched.cc  regexp.cc  socket.cc  (+4 more)
util/: docgen.tra  run_tcc  test.pl
(+304 files in other folders)
